convert the new test to junit