@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,13 +21,6 @@
  * questions.
  */
 
-import jdk.test.lib.util.JarBuilder;
-import org.testng.Assert;
-import org.testng.annotations.AfterTest;
-import org.testng.annotations.BeforeTest;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
-
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
@@ -35,19 +28,30 @@ import java.io.PrintStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.spi.ToolProvider;
 import java.util.stream.Stream;
 
-/**
+import jdk.test.lib.util.JarBuilder;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+/*
  * @test
  * @bug 8173970
  * @summary jar tool should allow extracting to specific directory
  * @library /test/lib
- * @run testng JarExtractTest
+ * @run junit JarExtractTest
  */
 public class JarExtractTest {
     private static final ToolProvider JAR_TOOL = ToolProvider.findFirst("jar")
@@ -58,15 +62,15 @@ public class JarExtractTest {
     private static final byte[] FILE_CONTENT = "Hello world!!!".getBytes(StandardCharsets.UTF_8);
     private static final String LEADING_SLASH_PRESERVED_ENTRY = "/tmp/8173970/f1.txt";
     // the jar that will get extracted in the tests
-    private static Path testJarPath;
+    private Path testJarPath;
     private static Collection<Path> filesToDelete = new ArrayList<>();
 
-    @BeforeTest
-    public static void createTestJar() throws Exception {
+    @BeforeEach
+    public void createTestJar() throws Exception {
         Files.deleteIfExists(Path.of(LEADING_SLASH_PRESERVED_ENTRY));
 
         final String tmpDir = Files.createTempDirectory("8173970-").toString();
-        testJarPath = Paths.get(tmpDir, "8173970-test.jar");
+        testJarPath = Path.of(tmpDir, "8173970-test.jar");
         final JarBuilder builder = new JarBuilder(testJarPath.toString());
         // d1
         //  |--- d2
@@ -86,7 +90,7 @@ public class JarExtractTest {
         filesToDelete.add(Path.of(LEADING_SLASH_PRESERVED_ENTRY));
     }
 
-    @AfterTest
+    @AfterEach
     public void cleanup() {
         for (final Path p : filesToDelete) {
             try {
@@ -101,62 +105,59 @@ public class JarExtractTest {
     /**
      * Creates and returns various relative paths, to which the jar will be extracted in the tests
      */
-    @DataProvider(name = "relExtractLocations")
-    private Object[][] provideRelativeExtractLocations() throws Exception {
+    static Stream<Arguments> provideRelativeExtractLocations() throws Exception {
         // create some dirs so that they already exist when the jar is being extracted
         final String existing1 = "." + File.separator + "8173970-existing-1";
-        Files.createDirectories(Paths.get(existing1));
+        Files.createDirectories(Path.of(existing1));
         final String existing2 = "." + File.separator + "foo" + File.separator + "8173970-existing-2";
-        Files.createDirectories(Paths.get(existing2));
-        final Path dirOutsideScratchDir = Files.createTempDirectory(Paths.get(".."), "8173970");
+        Files.createDirectories(Path.of(existing2));
+        final Path dirOutsideScratchDir = Files.createTempDirectory(Path.of(".."), "8173970");
         // we need to explicitly delete this dir after the tests end
         filesToDelete.add(dirOutsideScratchDir);
         final String existing3 = dirOutsideScratchDir.toString() + File.separator + "8173970-existing-3";
-        Files.createDirectories(Paths.get(existing3));
+        Files.createDirectories(Path.of(existing3));
 
         final String anotherDirOutsideScratchDir = ".." + File.separator + "8173970-non-existent";
-        filesToDelete.add(Paths.get(anotherDirOutsideScratchDir));
+        filesToDelete.add(Path.of(anotherDirOutsideScratchDir));
 
-        return new Object[][]{
-                {"."}, // current dir
-                {"." + File.separator + "8173970-extract-1"}, // (explicitly) relative to current dir
-                {"8173970-extract-2"}, // (implicitly) relative to current dir
-                {anotherDirOutsideScratchDir}, // sibling to current dir
-                // some existing dirs
-                {existing1},
-                {existing2},
-                {existing3},
-                // a non-existent dir within an existing dir
-                {existing1 + File.separator + "non-existing" + File.separator + "foo"}
-        };
+        final List<Arguments> args = new ArrayList<>();
+        args.add(Arguments.of(".")); // current dir
+        // (explicitly) relative to current dir
+        args.add(Arguments.of("." + File.separator + "8173970-extract-1"));
+        // (implicitly) relative to current dir
+        args.add(Arguments.of("8173970-extract-2"));
+        // sibling to current dir
+        args.add(Arguments.of(anotherDirOutsideScratchDir));
+        // some existing dirs
+        args.add(Arguments.of(existing1));
+        args.add(Arguments.of(existing2));
+        args.add(Arguments.of(existing3));
+        // a non-existent dir within an existing dir
+        args.add(Arguments.of(existing1 + File.separator
+                + "non-existing" + File.separator + "foo"));
+        return args.stream();
     }
 
     /**
      * Creates and returns various absolute paths, to which the jar will be extracted in the tests
      */
-    @DataProvider(name = "absExtractLocations")
-    private Object[][] provideAbsoluteExtractLocations() throws Exception {
-        final Object[][] relative = provideRelativeExtractLocations();
-        final Object[][] abs = new Object[relative.length][1];
-        int i = 0;
-        for (final Object[] p : relative) {
-            abs[i++][0] = Paths.get((String) p[0]).toAbsolutePath().toString();
-        }
-        return abs;
+    static Stream<Arguments> provideAbsoluteExtractLocations() throws Exception {
+        final Stream<Arguments> relative = provideRelativeExtractLocations();
+        return relative.map((arg) -> {
+            final String relPath = (String) arg.get()[0];
+            return Arguments.of(Path.of(relPath).toAbsolutePath().toString());
+        });
     }
 
     /**
      * Creates and returns various normalized paths, to which the jar will be extracted in the tests
      */
-    @DataProvider(name = "absNormalizedExtractLocations")
-    private Object[][] provideAbsoluteNormalizedExtractLocations() throws Exception {
-        final Object[][] relative = provideAbsoluteExtractLocations();
-        final Object[][] abs = new Object[relative.length][1];
-        int i = 0;
-        for (final Object[] p : relative) {
-            abs[i++][0] = Paths.get((String) p[0]).toAbsolutePath().normalize().toString();
-        }
-        return abs;
+    static Stream<Arguments> provideAbsoluteNormalizedExtractLocations() throws Exception {
+        final Stream<Arguments> relative = provideRelativeExtractLocations();
+        return relative.map((arg) -> {
+            final String relPath = (String) arg.get()[0];
+            return Arguments.of(Path.of(relPath).toAbsolutePath().normalize().toString());
+        });
     }
 
     /**
@@ -164,7 +165,8 @@ public class JarExtractTest {
      * verifies that the extracted content is at the expected locations with the correct
      * content
      */
-    @Test(dataProvider = "relExtractLocations")
+    @ParameterizedTest
+    @MethodSource("provideRelativeExtractLocations")
     public void testExtractToRelativeDir(final String dest) throws Exception {
         testLongFormExtract(dest);
         testExtract(dest);
@@ -175,7 +177,8 @@ public class JarExtractTest {
      * verifies that the extracted content is at the expected locations with the correct
      * content
      */
-    @Test(dataProvider = "absExtractLocations")
+    @ParameterizedTest
+    @MethodSource("provideAbsoluteExtractLocations")
     public void testExtractToAbsoluteDir(final String dest) throws Exception {
         testExtract(dest);
         testLongFormExtract(dest);
@@ -186,7 +189,8 @@ public class JarExtractTest {
      * using the -C/--dir option and then verifies that the extracted content is at the expected locations
      * with the correct content
      */
-    @Test(dataProvider = "absNormalizedExtractLocations")
+    @ParameterizedTest
+    @MethodSource("provideAbsoluteNormalizedExtractLocations")
     public void testExtractToAbsoluteNormalizedDir(final String dest) throws Exception {
         testExtract(dest);
         testLongFormExtract(dest);
@@ -201,7 +205,7 @@ public class JarExtractTest {
         System.out.println("Extracting " + testJarPath + " to " + dest);
         final int exitCode = JAR_TOOL.run(System.out, System.err, "-x", "-f", testJarPath.toString(),
                 "--dir", dest);
-        Assert.assertEquals(exitCode, 0, "Failed to extract " + testJarPath + " to " + dest);
+        assertEquals(0, exitCode, "Failed to extract " + testJarPath + " to " + dest);
         verifyExtractedContent(dest);
     }
 
@@ -212,12 +216,12 @@ public class JarExtractTest {
     public void testHelpOutput() {
         final ByteArrayOutputStream outStream = new ByteArrayOutputStream();
         final int exitCode = JAR_TOOL.run(new PrintStream(outStream), System.err, "--help");
-        Assert.assertEquals(exitCode, 0, "jar --help command failed");
+        assertEquals(0, exitCode, "jar --help command failed");
         final String output = outStream.toString();
         // this message is expected to be the one from the jar --help output which is sourced from
         // jar.properties
         final String expectedMsg = "--dir                    Directory into which the jar will be extracted";
-        Assert.assertTrue(output.contains(expectedMsg), "jar --help didn't contain --dir option");
+        assertTrue(output.contains(expectedMsg), "jar --help didn't contain --dir option");
     }
 
     /**
@@ -227,7 +231,7 @@ public class JarExtractTest {
     @Test
     public void testExtractWithoutOutputDir() throws Exception {
         final int exitCode = JAR_TOOL.run(System.out, System.err, "-x", "-f", testJarPath.toString());
-        Assert.assertEquals(exitCode, 0, "Failed to extract " + testJarPath);
+        assertEquals(0, exitCode, "Failed to extract " + testJarPath);
         // the content would have been extracted to current dir
         verifyExtractedContent(".");
     }
@@ -239,7 +243,7 @@ public class JarExtractTest {
     @Test
     public void testLongFormExtractWithoutOutputDir() throws Exception {
         final int exitCode = JAR_TOOL.run(System.out, System.err, "--extract", "-f", testJarPath.toString());
-        Assert.assertEquals(exitCode, 0, "Failed to extract " + testJarPath);
+        assertEquals(0, exitCode, "Failed to extract " + testJarPath);
         // the content would have been extracted to current dir
         verifyExtractedContent(".");
     }
@@ -259,19 +263,19 @@ public class JarExtractTest {
         for (final String[] args : cmdArgs) {
             printJarCommand(args);
             final int exitCode = JAR_TOOL.run(System.out, System.err, args);
-            Assert.assertEquals(exitCode, 0, "Failed to extract " + jarPath);
+            assertEquals(0, exitCode, "Failed to extract " + jarPath);
             final String dest = ".";
-            Assert.assertTrue(Files.isDirectory(Paths.get(dest)), dest + " is not a directory");
-            final Path d1 = Paths.get(dest, "d1");
-            Assert.assertTrue(Files.isDirectory(d1), d1 + " directory is missing or not a directory");
-            final Path d2 = Paths.get(dest, "d1", "d2");
-            Assert.assertTrue(Files.isDirectory(d2), d2 + " directory is missing or not a directory");
-            final Path f1 = Paths.get(LEADING_SLASH_PRESERVED_ENTRY);
-            Assert.assertTrue(Files.isRegularFile(f1), f1 + " is missing or not a file");
-            Assert.assertEquals(Files.readAllBytes(f1), FILE_CONTENT, "Unexpected content in file " + f1);
-            final Path f2 = Paths.get("d1/d2/../f2.txt");
-            Assert.assertTrue(Files.isRegularFile(f2), f2 + " is missing or not a file");
-            Assert.assertEquals(Files.readAllBytes(f2), FILE_CONTENT, "Unexpected content in file " + f2);
+            assertTrue(Files.isDirectory(Path.of(dest)), dest + " is not a directory");
+            final Path d1 = Path.of(dest, "d1");
+            assertTrue(Files.isDirectory(d1), d1 + " directory is missing or not a directory");
+            final Path d2 = Path.of(dest, "d1", "d2");
+            assertTrue(Files.isDirectory(d2), d2 + " directory is missing or not a directory");
+            final Path f1 = Path.of(LEADING_SLASH_PRESERVED_ENTRY);
+            assertTrue(Files.isRegularFile(f1), f1 + " is missing or not a file");
+            assertArrayEquals(FILE_CONTENT, Files.readAllBytes(f1), "Unexpected content in file " + f1);
+            final Path f2 = Path.of("d1/d2/../f2.txt");
+            assertTrue(Files.isRegularFile(f2), f2 + " is missing or not a file");
+            assertArrayEquals(FILE_CONTENT, Files.readAllBytes(f2), "Unexpected content in file " + f2);
         }
     }
 
@@ -299,9 +303,9 @@ public class JarExtractTest {
             final ByteArrayOutputStream err = new ByteArrayOutputStream();
             printJarCommand(args);
             int exitCode = JAR_TOOL.run(System.out, new PrintStream(err), args);
-            Assert.assertNotEquals(exitCode, 0, "jar extraction was expected to fail but didn't");
+            assertNotEquals(0, exitCode, "jar extraction was expected to fail but didn't");
             // verify it did indeed fail due to the right reason
-            Assert.assertTrue(err.toString(StandardCharsets.UTF_8).contains(expectedErrMsg));
+            assertTrue(err.toString(StandardCharsets.UTF_8).contains(expectedErrMsg));
         }
     }
 
@@ -314,7 +318,7 @@ public class JarExtractTest {
         final String[] args = new String[]{"-xvf", testJarPath.toString(), "-C", tmpDir};
         printJarCommand(args);
         final int exitCode = JAR_TOOL.run(System.out, System.err, args);
-        Assert.assertEquals(exitCode, 0, "Failed to extract " + testJarPath);
+        assertEquals(0, exitCode, "Failed to extract " + testJarPath);
         verifyExtractedContent(tmpDir);
     }
 
@@ -339,9 +343,9 @@ public class JarExtractTest {
             final ByteArrayOutputStream err = new ByteArrayOutputStream();
             printJarCommand(args);
             int exitCode = JAR_TOOL.run(System.out, new PrintStream(err), args);
-            Assert.assertNotEquals(exitCode, 0, "jar extraction was expected to fail but didn't");
+            assertNotEquals(0, exitCode, "jar extraction was expected to fail but didn't");
             // verify it did indeed fail due to the right reason
-            Assert.assertTrue(err.toString(StandardCharsets.UTF_8).contains(expectedErrMsg));
+            assertTrue(err.toString(StandardCharsets.UTF_8).contains(expectedErrMsg));
         }
     }
 
@@ -369,7 +373,7 @@ public class JarExtractTest {
     private void testExtractPartialContent(final String destDir, final String[] extractArgs) throws Exception {
         printJarCommand(extractArgs);
         final int exitCode = JAR_TOOL.run(System.out, System.err, extractArgs);
-        Assert.assertEquals(exitCode, 0, "Failed to extract " + testJarPath);
+        assertEquals(0, exitCode, "Failed to extract " + testJarPath);
         // make sure only the specific files were extracted
         final Stream<Path> paths = Files.walk(Path.of(destDir));
         // files/dirs count expected to be found when the location to which the jar was extracted
@@ -377,25 +381,25 @@ public class JarExtractTest {
         // 1) The top level dir being walked 2) f1.txt file 3) d1 dir 4) d1/d2 dir
         // 5) d1/d2/d3 dir 6) d1/d2/d3/f2.txt file
         final int numExpectedFiles = 6;
-        Assert.assertEquals(paths.count(), numExpectedFiles, "Unexpected number of files/dirs in " + destDir);
-        final Path f1 = Paths.get(destDir, "f1.txt");
-        Assert.assertTrue(Files.isRegularFile(f1), f1.toString() + " wasn't extracted from " + testJarPath);
-        Assert.assertEquals(Files.readAllBytes(f1), FILE_CONTENT, "Unexpected content in file " + f1);
-        final Path d1 = Paths.get(destDir, "d1");
-        Assert.assertTrue(Files.isDirectory(d1), d1.toString() + " wasn't extracted from " + testJarPath);
-        Assert.assertEquals(Files.walk(d1, 1).count(), 2, "Unexpected number " +
+        assertEquals(numExpectedFiles, paths.count(), "Unexpected number of files/dirs in " + destDir);
+        final Path f1 = Path.of(destDir, "f1.txt");
+        assertTrue(Files.isRegularFile(f1), f1.toString() + " wasn't extracted from " + testJarPath);
+        assertArrayEquals(FILE_CONTENT, Files.readAllBytes(f1), "Unexpected content in file " + f1);
+        final Path d1 = Path.of(destDir, "d1");
+        assertTrue(Files.isDirectory(d1), d1.toString() + " wasn't extracted from " + testJarPath);
+        assertEquals(2, Files.walk(d1, 1).count(), "Unexpected number " +
                 "of files/dirs in " + d1);
-        final Path d2 = Paths.get(d1.toString(), "d2");
-        Assert.assertTrue(Files.isDirectory(d2), d2.toString() + " wasn't extracted from " + testJarPath);
-        Assert.assertEquals(Files.walk(d2, 1).count(), 2, "Unexpected number " +
+        final Path d2 = Path.of(d1.toString(), "d2");
+        assertTrue(Files.isDirectory(d2), d2.toString() + " wasn't extracted from " + testJarPath);
+        assertEquals(2, Files.walk(d2, 1).count(), "Unexpected number " +
                 "of files/dirs in " + d2);
-        final Path d3 = Paths.get(d2.toString(), "d3");
-        Assert.assertTrue(Files.isDirectory(d3), d3.toString() + " wasn't extracted from " + testJarPath);
-        Assert.assertEquals(Files.walk(d3, 1).count(), 2, "Unexpected number " +
+        final Path d3 = Path.of(d2.toString(), "d3");
+        assertTrue(Files.isDirectory(d3), d3.toString() + " wasn't extracted from " + testJarPath);
+        assertEquals(2, Files.walk(d3, 1).count(), "Unexpected number " +
                 "of files/dirs in " + d3);
-        final Path f2 = Paths.get(d3.toString(), "f2.txt");
-        Assert.assertTrue(Files.isRegularFile(f2), f2.toString() + " wasn't extracted from " + testJarPath);
-        Assert.assertEquals(Files.readAllBytes(f2), FILE_CONTENT, "Unexpected content in file " + f2);
+        final Path f2 = Path.of(d3.toString(), "f2.txt");
+        assertTrue(Files.isRegularFile(f2), f2.toString() + " wasn't extracted from " + testJarPath);
+        assertArrayEquals(FILE_CONTENT, Files.readAllBytes(f2), "Unexpected content in file " + f2);
     }
 
     /**
@@ -405,7 +409,7 @@ public class JarExtractTest {
         final String[] args = new String[]{"-x", "-f", testJarPath.toString(), "-C", dest};
         printJarCommand(args);
         final int exitCode = JAR_TOOL.run(System.out, System.err, args);
-        Assert.assertEquals(exitCode, 0, "Failed to extract " + testJarPath + " to " + dest);
+        assertEquals(0, exitCode, "Failed to extract " + testJarPath + " to " + dest);
         verifyExtractedContent(dest);
     }
 
@@ -417,7 +421,7 @@ public class JarExtractTest {
         final String[] args = new String[]{"--extract", "-f", testJarPath.toString(), "-C", dest};
         printJarCommand(args);
         final int exitCode = JAR_TOOL.run(System.out, System.err, args);
-        Assert.assertEquals(exitCode, 0, "Failed to extract " + testJarPath + " to " + dest);
+        assertEquals(0, exitCode, "Failed to extract " + testJarPath + " to " + dest);
         verifyExtractedContent(dest);
     }
 
@@ -425,28 +429,28 @@ public class JarExtractTest {
      * Verifies that the extracted jar content matches what was present in the original jar
      */
     private void verifyExtractedContent(final String dest) throws IOException {
-        Assert.assertTrue(Files.isDirectory(Paths.get(dest)), dest + " is not a directory");
-        final Path d1 = Paths.get(dest, "d1");
-        Assert.assertTrue(Files.isDirectory(d1), d1 + " directory is missing or not a directory");
-        final Path d2 = Paths.get(dest, "d1", "d2");
-        Assert.assertTrue(Files.isDirectory(d2), d2 + " directory is missing or not a directory");
-        final Path d3 = Paths.get(dest, "d1", "d2", "d3");
-        Assert.assertTrue(Files.isDirectory(d3), d3 + " directory is missing or not a directory");
-        final Path d4 = Paths.get(dest, "d1", "d4");
-        Assert.assertTrue(Files.isDirectory(d4), d4 + " directory is missing or not a directory");
+        assertTrue(Files.isDirectory(Path.of(dest)), dest + " is not a directory");
+        final Path d1 = Path.of(dest, "d1");
+        assertTrue(Files.isDirectory(d1), d1 + " directory is missing or not a directory");
+        final Path d2 = Path.of(dest, "d1", "d2");
+        assertTrue(Files.isDirectory(d2), d2 + " directory is missing or not a directory");
+        final Path d3 = Path.of(dest, "d1", "d2", "d3");
+        assertTrue(Files.isDirectory(d3), d3 + " directory is missing or not a directory");
+        final Path d4 = Path.of(dest, "d1", "d4");
+        assertTrue(Files.isDirectory(d4), d4 + " directory is missing or not a directory");
         // d1/d4 is expected to be empty directory
         final List<Path> d4Children;
         try (final Stream<Path> s = Files.walk(d4, 1)) {
             d4Children = s.toList();
         }
-        Assert.assertEquals(d4Children.size(), 1, "Directory " + d4
+        assertEquals(1, d4Children.size(), "Directory " + d4
                 + " has unexpected files/dirs: " + d4Children);
-        final Path f1 = Paths.get(dest, "f1.txt");
-        Assert.assertTrue(Files.isRegularFile(f1), f1 + " is missing or not a file");
-        Assert.assertEquals(Files.readAllBytes(f1), FILE_CONTENT, "Unexpected content in file " + f1);
-        final Path f2 = Paths.get(d3.toString(), "f2.txt");
-        Assert.assertTrue(Files.isRegularFile(f2), f2 + " is missing or not a file");
-        Assert.assertEquals(Files.readAllBytes(f2), FILE_CONTENT, "Unexpected content in file " + f2);
+        final Path f1 = Path.of(dest, "f1.txt");
+        assertTrue(Files.isRegularFile(f1), f1 + " is missing or not a file");
+        assertArrayEquals(FILE_CONTENT, Files.readAllBytes(f1), "Unexpected content in file " + f1);
+        final Path f2 = Path.of(d3.toString(), "f2.txt");
+        assertTrue(Files.isRegularFile(f2), f2 + " is missing or not a file");
+        assertArrayEquals(FILE_CONTENT, Files.readAllBytes(f2), "Unexpected content in file " + f2);
     }
 
     /**
@@ -455,7 +459,7 @@ public class JarExtractTest {
      */
     private static Path createJarWithPFlagSemantics() throws IOException {
         final String tmpDir = Files.createTempDirectory(Path.of("."), "8173970-").toString();
-        final Path jarPath = Paths.get(tmpDir, "8173970-test-withpflag.jar");
+        final Path jarPath = Path.of(tmpDir, "8173970-test-withpflag.jar");
         final JarBuilder builder = new JarBuilder(jarPath.toString());
         builder.addEntry("d1/", new byte[0]);
         builder.addEntry("d1/d2/", new byte[0]);
